<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AeroWX</string>
    
    <!-- Metar Activity strings -->
    <string name="title_activity_metar">Current Weather</string>
    <string name="action_settings">Settings</string>
    <string name="AeroWX">Aeronautical Weather in the Field</string>
    <string name="Station">Station</string>
    <string name="Time">Time</string>
    <string name="Temp">Temp</string>
    <string name="Dewpoint">Dewpoint</string>
    <string name="Pressure">Pressure</string>
    <string name="Wind">Wind</string>
    <string name="Visibility">Visibility</string>
    <string name="Weather">Weather</string>
    <string name="Sky">Sky</string>
    <string name="Forecast">Forecast</string>

    <!-- Mav Activity strings -->
    <string name="title_activity_gfs">Forecast</string>
    <string name="High">High</string>
    <string name="Low">Low</string>
    <string name="Dewpt">Dewpt</string>
    <string name="Precip">Precip</string>
    <string name="Visi">Visi</string>
    <string name="Thund">Thund</string>
    <string name="Ceil">Ceil</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="URL">Server URL</string>
    <string name="Save">Save</string>
    <string name="switchBut">Weather Forecast</string>
    <string name="currentButton">Current Weather</string>
    <string name="CurrentWeather">Current Weather</string>

</resources>