<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/AeroWX"
        android:textColor="#ff0000"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/stationLabel"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settingsTitle"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="none"
        android:text="@string/Station" >
    </TextView>

    <EditText
        android:id="@+id/stationSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/settingsTitle"
        android:layout_margin="2dp"
        android:ems="10"
        android:inputType="text"
        android:lines="1" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/baseURLLabel"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/stationLabel"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="none"
        android:text="@string/URL" >
    </TextView>

    <EditText
        android:id="@+id/baseURLSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/stationSetting"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/baseURLLabel"
        android:ems="10"
        android:inputType="textUri" >
    </EditText>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/baseURLLabel"
        android:layout_below="@+id/baseURLSetting"
        android:layout_marginTop="24dp"
        android:text="@string/Save" 
        android:onClick="doSave"/>

</RelativeLayout>