<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GFSActivity" >

    <TextView
        android:id="@+id/gfsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/AeroWX"
        android:textColor="#ff0000"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/stationLabel"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gfsTitle"
        android:layout_margin="2dp"
        android:ems="10"
        android:inputType="none"
        android:text="@string/Station" >
    </TextView>

    <TextView
        android:id="@+id/station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/stationLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/stationLabel"
        android:ems="10"
        android:inputType="none" >
    </TextView>

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/stationLabel"
        android:layout_margin="2dp"
        android:ems="10"
        android:inputType="none"
        android:text="@string/Time" >
    </TextView>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/timeLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/timeLabel"
        android:ems="10"
        android:inputType="none" >
    </TextView>

    <TextView
        android:id="@+id/highLabel"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/timeLabel"
        android:layout_margin="2dp"
        android:ems="10"
        android:inputType="none"
        android:text="@string/High" >
    </TextView>

    <TextView
        android:id="@+id/high"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/highLabel"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/highLabel"
        android:ems="10"
        android:inputType="none" >
    </TextView>

    <TextView
        android:id="@+id/lowLabel"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/highLabel"
        android:layout_alignParentStart="true"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/high"
        android:ems="10"
        android:inputType="none"
        android:text="@string/Low" />

    <TextView
        android:id="@+id/low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/highLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/lowLabel"
        android:ems="10"
        android:inputType="none" >
    </TextView>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/highLabel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/highLabel" >

        <TableRow
            android:id="@+id/periodDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <!-- Header Row -->

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="none" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="12sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="12sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="12sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:id="@+id/periodTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="12sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="12sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="12sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="12sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tempRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:ems="10"
                android:inputType="none"
                android:text="@string/Temp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="12sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="12sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="12sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:id="@+id/dewptRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:ems="10"
                android:inputType="none"
                android:text="@string/Dewpt" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="12sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="12sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="12sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:id="@+id/sky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:ems="10"
                android:inputType="none"
                android:text="@string/Sky" />
        </TableRow>

        <TableRow
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:ems="10"
                android:inputType="none"
                android:text="@string/Wind" />
        </TableRow>

        <TableRow
            android:id="@+id/precip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:ems="10"
                android:inputType="none"
                android:text="@string/Precip" />
        </TableRow>

        <TableRow
            android:id="@+id/thund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:ems="10"
                android:inputType="none"
                android:text="@string/Thund" />
        </TableRow>

        <TableRow
            android:id="@+id/vis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:ems="10"
                android:inputType="none"
                android:text="@string/Visi" />
        </TableRow>

        <TableRow
            android:id="@+id/ceil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:ems="10"
                android:inputType="none"
                android:text="@string/Ceil" />
        </TableRow>

        <TableRow>
        </TableRow>
    </TableLayout>

</RelativeLayout>