<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginTop="2dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MetarActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/AeroWX"
        android:textColor="#ff0000"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/stationLabel"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1"
        android:layout_margin="2dp"
        android:ems="10"
        android:inputType="none"
        android:text="@string/Station" >

    </TextView>

    <TextView
        android:id="@+id/station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/stationLabel"
        android:layout_alignBottom="@+id/station"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/stationLabel"
        android:ems="10"
        android:inputType="none" >
    </TextView>

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/stationLabel"
        android:layout_margin="2dp"
        android:ems="10"
        android:inputType="none"
        android:text="@string/Time" >
    </TextView>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/timeLabel"
        android:layout_alignBottom="@+id/timeLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/timeLabel"
        android:ems="10"
        android:inputType="none" >
    </TextView>

    <TextView
        android:id="@+id/tempLabel"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/timeLabel"
        android:layout_margin="2dp"
        android:ems="10"
        android:inputType="none"
        android:text="@string/Temp" >
    </TextView>

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tempLabel"
        android:layout_alignBottom="@+id/tempLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/tempLabel"
        android:ems="10"
        android:inputType="none" >
    </TextView>
</RelativeLayout>